--- a/RandomForestClassifier.cabal
+++ b/RandomForestClassifier.cabal
@@ -54,13 +54,13 @@ executable RandomForestClassifier
   main-is:             Main.hs
 
   -- Modules included in this executable, other than Main.
-  -- other-modules:
+  other-modules: DesisionTree Csv RandomForest
 
   -- LANGUAGE extensions used by modules in this package.
   other-extensions:    ExistentialQuantification
 
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.11 && <4.12, split
+  build-depends:       base >=4.11 && <4.12, split, random
 
   -- Directories containing source files.
   -- hs-source-dirs:
